[FIX] fix upload btn works wrong when the fileName is too long, fix scrum board auto height to 100%, fix title too long, fix the board card will show null even the assignee is empty

--- a/agile/src/app/agile/containers/project/userMap/home/Home4.scss
+++ b/agile/src/app/agile/containers/project/userMap/home/Home4.scss
@@ -68,6 +68,7 @@
   display: flex;
   align-items: stretch;
   padding-left: 1px;
+  width: max-content;
 }
 
 .fixHead-line-title {
